<resources>
    <string name="app_name">ExpressCaff</string>
    <string name="action_settings">Settings</string>

<!-- SignupActivity && LoginSignUpActivity-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>

    <string name="forgottenText">Enter the email you registered with:</string>

    <string name="Address">Address</string>
    <string name="Postal">Postal code</string>
    <string name="Phone">Phone number</string>
    <string name="card_info">Card number</string>
    <string-array name="card_type">
        <item>VISA</item>
        <item>MasterCard</item>
        <item>Diners</item>
    </string-array>
    <string name="card_CVC">CVC</string>

    <string name="ForgottenBtn">Forgotten password</string>


    <string-array name="coffee_type">
        <item>Coffee, Black</item>
        <item>Coffee Americano</item>
        <item>Espresso</item>
        <item>Coffee Macchiato</item>
        <item>Caffe Latte</item>
    </string-array>

    <string-array name="settings">
        <item>Feedback</item>
        <item>Privacy</item>
        <item>About this project</item>
    </string-array>



    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_shop">Choose your coffee shop</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="select_coffee">Select your coffee</string>
    <string name="select_coffeeshop">Select your coffee shop</string>

    <string name="pay">Buy</string>


    <string name="title_activity_forgotten">Forgotten password</string>
    <string name="title_activity_order">Choose your coffee</string>
    <string name="title_activity_receipt">ReceiptActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
