<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_signup" tools:context="com.info212.expresscaff.SignupActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="60dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpUsername"
            android:hint="@string/Username"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpPassword"
            android:hint="@string/Password"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpEmail"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpPhone"
        android:hint="@string/Phone"
        android:inputType="phone"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignupBtn"
            android:id="@+id/confirmSignUp"
            android:layout_gravity="center_horizontal" />




</LinearLayout>
