<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_loginsignup" tools:context="com.info212.expresscaff.LoginSignupActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:layout_marginTop="60dp"
    >

    <!-- For aa forhindre at textviewene aktiverer på activity start-->
    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="0dp"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:background="@mipmap/ic_launcher"
            android:layout_height="250dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView2" />



    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:hint="@string/Username"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:background="#40000000"
        android:textSize="18sp"
        android:textColor="@color/background"
        android:textColorHint="#c1bdb8"
        android:drawableLeft="@drawable/user_icon"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:background="#40000000"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:textColorHint="#c1bdb8"
        android:drawableLeft="@drawable/pass_icon"

        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/LoginBtn"
        android:id="@+id/login"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_round"
        android:textColor="#fff"
        android:elevation="2dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/SignupBtn"
            android:id="@+id/signup"
            android:background="#21000000"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/background"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="12sp"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/forgotten"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ForgottenBtn"
            android:id="@+id/forgotten"
            android:background="#21000000"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:textColor="@color/background"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="12sp"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</RelativeLayout>