<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_forgotten"
    tools:context="com.info212.expresscaff.ForgottenActivity"
    android:layout_below="@id/toolbar"
    android:layout_marginTop="60dp">


    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgottenText"
                android:layout_above="@+id/forgottenEmail"
                android:layout_alignParentStart="true"
                android:textColor="@color/background"
                android:background="#40000000"
                android:padding="10dp"


                />

            <EditText
            android:id="@+id/forgottenEmail"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
            android:hint="@string/Email"
                android:background="#40000000"
                android:textSize="18sp"
                android:textColor="@color/background"
                android:textColorHint="#c1bdb8"
                android:drawableStart="@drawable/email_icon"

                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/ForgottenBtn"
                android:id="@+id/forgottenPass"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round"
                android:textColor="#fff"
                android:layout_below="@+id/forgottenEmail"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

</RelativeLayout>
